# ResearchCodes

./: .gitignore  .gitmodules  1DGPinfoSLAM.py  Acc_2021-02-19_163407.txt  Acc_2021-02-19_171404.txt  Debug Costs.txt  Doxyfile  Gyr_2021-02-19_163407.txt  Gyr_2021-02-19_171404.txt  IMUfilter.m  INSTALL.txt  New Microsoft Excel Worksheet.xlsx  PoseGraph-Sample  README.md  SLAM.sublime-project  SLAM.sublime-workspace  SLAM2D_buildmap.py  SLAM2D_linfit.py  SLAM2D_run.py  SLAMtest.ipynb  Untitled.m  binmatchgood.py  cameraconfig.py  consumer_producer.py  debugMeasUpdateInfo.py  debugtest.txt  g2oTesting.py  gppy.py  kitti_localize_config.yml  loggerconfig.py  loopcloseDebug.py  main.md  main_2Dlidar_scan_gmm.py  main_AAS2020_GMMMOC.py  main_ACC2021_IMMJPDA.py  main_ACC2021_MMPFJMS.py  main_AIAA2020_IMMJPDA.py  main_ExtendedKalmanFilter_CVCTmodels.py  main_ExtendedKalmanFilter_discretetime_withjac.py  main_GaussianSplittingMerging.py  (+47 more)
IMUrecorder/: icm20948.py  multipleImuTest2.py
ML/: basicpytorch.py  plot_saved_map.py  untitled.m
MOC/: moctreepf.py
MOTS/MOTSFusion-master/: config.py  main.py  precompute.py
PCL_cpp/: CMakeLists.txt
TIDAR/: camAnalysis.xlsx  camAnalysis_working.xlsx  camera_opt.py  target_detect.py
dbow/DBow3-master/utils/: CMakeLists.txt
dbow/pyDBoW3-master/: login.txt
dbowwrapper/: CMakeLists.txt  setup.py
dbowwrapper/docs/: conf.py
dbowwrapper/pybind11/: setup.py
dbowwrapper/pybind11/docs/: benchmark.py  conf.py
dbowwrapper/pybind11/pybind11/: __main__.py
dbowwrapper/pybind11/tests/: conftest.py  test_builtin_casters.py  test_callbacks.py  test_class.py  test_eigen.py  test_exceptions.py  test_factory_constructors.py  test_kwargs_and_defaults.py  test_local_bindings.py  test_methods_and_attributes.py  test_multiple_inheritance.py  test_numpy_array.py  test_numpy_dtypes.py  test_numpy_vectorize.py  test_opaque_types.py  test_operator_overloading.py  test_pickling.py  test_pytypes.py  test_sequences_and_iterators.py  test_smart_ptr.py  test_stl.py  test_stl_binders.py  test_virtual_functions.py
dbowwrapper/pybind11/tools/: libsize.py  mkdoc.py
dbowwrapper/pybind11/tools/clang/: cindex.py
dbowwrapper/src/: main.cpp
debugPlots/: DebugCosts.txt
dubins/: dubinctrl.m  dubinmodel.m  test_dubinctrl.m
lidarprocessing/: icp.py  main_scan_matching.py  main_scan_matching_deutchesmeuseum.py  main_scanmatching_binbox.py  main_turtlebot_Estimator.py  main_turtlebot_Plotter.py  main_turtlebot_lidarProcessor.py  pclregistration.py  point2Dplotting.py  point2Dprocessing.py  point3Dprocessing.py  turtlebotModels.py
lidarprocessing-deprec/: main_scan_matching.py  pklmsgtopython.py  point2Dprocessing.py  rosbagread_pose.py
lidarprocessing-deprec/houseMult_bag/: metadata.yaml
lidarprocessing-deprec/point2d/: dataset.py  model.py
lidarprocessing/3DScanMatching/: pointCloudPlotFunctions.py  posegraphData_all.txt  readData.py  readKittiOdom.py  readPosegraph.py  scanMatcher.py
lidarprocessing/numba_codes/: binmatchers.py  cudaFunctions.py  gicp.py  numbaFunctions.py  point2Dprocessing_numba.py  point3Dprocessing_numba.py
lidarprocessing/point2d/: dataset.py  train.py
lidarprocessing/pytorch/: cudadevicequery
lidarprocessing/scan_matching/: gmmfuncs.py
lidarprocessing2/: rosbagread.py
lidarprocessing2/point2d/: model.py  train.py
lidarprocessing23/: PoseGraph-Sample  README.md  point2Dprocessing.py  ros2bag_deutchemuseum_.py  rosbagread.py  turtlebot_helper.py
lidarprocessing23/mypointpillar/: models.py
lidarprocessing23/point2d/: firstClassifier.model
lidarprocessing23/scan_matching/: point2Dplotting.py  (+2 more)
maps/: gridmap.py
master-thesis_thibo/: main_old.py  main_run.py  main_testing.py  plotting.py  radar_filter.py  simmanager.py
mlearn/: cudadevicequery.cc  test.py
mlearn/pytorchutils/pointcloudcore/cc/: CMakeLists.txt
ndpoly/: __init__.py  polybase.py  polybasis.py  polyoperations.py  polytransforms.py
odometry/: motrackingTest.py  open3DegVIZ.py  open3DegVIZ2.py  testodoKITTI.py
optitrack/: NatNet_SDK_3.1_ubuntu.tar  makefile
optitrack_recorder/: CMakeLists.txt
optitrack_recorder/mains/: optitrack_recorder.cpp
physmodels/: duffing.py  mapmodels.py  motionmodels.py  sensormodels.py  sensormodels_fov.py  targets.py  transitionmodels.py
pycpp/: CMakeLists.txt
pykitti/: tracking.py  utils.py
pykitticustom/: README.md  __init__.py  odometry.py  tracking.py  tracking2.py  utils.py
pykitticustom (2)/: raw.py
pykitticustom (2) (2)/: odometry.py  tracking2.py
pykitticustom_deprecated/: __init__.py
pyslam/: CMakeLists.txt  README.md  kittilocal  pclviewer  pclvisualizer  setup.py
pyslam/include/: base.h  binmatch.h  donseg.h  gg.py.gddoc  localize.h  measmapmanagers.h  mygicp.h  mygicp.hpp  pcl_helpers.h  pcl_registration.h  pcl_visual.h  pf.h  pythonrun.h  targetmodels.h
pyslam/scripts/: binmatchwrap.cpp  kittiLocalize.cpp  main.cpp  pclviewer.cpp  pclvisualizer.cpp
pyslam/src/: base.cpp  binmatch.cpp  donseg.cpp  localize.cpp  main.cpp  measmapmanagers.cpp  pcl_helpers.cpp  pcl_registration.cpp  pcl_visual.cpp  pf.cpp  pythonrun.cpp  targetmodels.cpp
reinforcement/: invertedbar.py
robot/: gridrobot.py  templatetraj.py
ros2_ws/src/zed_realsense/: CMakeLists.txt  package.xml
ros2_ws/src/zed_realsense/src/: zednode.cpp
sensortasking/: exhaustive_tasking.py  exhaustive_tasking_seq_robot.py  exhaustive_tasking_seq_time.py  greedy.py  robotdp.py  robotinfo.py
systemID/: analyzeData.py  main_analyzeData.py  rigidbody_imu_calib.py  timedataProcessors.py
systemanalysis/: main_reach_test1.py
turtlebot/: classes.py  debug.py  main_turtlebot_Plotter.py  main_turtlebot_lidarLoopClose.py  main_turtlebot_lidarProcessor.py  main_turtlebot_parameters.py  sensorQ.py  turtlebot_helper.py
utils/: caching.py  parconsumer.py  redis.py  simmanager.py
zed_realsense/: CMakeLists.txt  pytest.py  readbinaryImage.py  testrecorded.py
zed_realsense/recorder/: CMakeLists.txt
zed_realsense/recorder/include/: SN16717641.conf  cv-helpers.hpp
zed_realsense/recorder/main/: l515recorder.cpp  zedrecorder.cpp
(+9636 files in other folders)
